--- a/prj04_emb/Makefile
+++ b/prj04_emb/Makefile
@@ -1,11 +1,20 @@
 .PHONY:*
 
-PIP=venv/bin/pip3.10
+PIP=./venv/bin/pip3.10
+PY=./venv/bin/python
 
-install:
+get_data:
+	mkdir -p ./data
+	wget https://github.com/yutkin/Lenta.Ru-News-Dataset/releases/download/v1.0/lenta-ru-news.csv.gz
+	gzip -cd lenta-ru-news.csv.gz > ./data/lenta-ru-news.csv
+
+
+prepare_data: get_data
+	${PY} prepare_data.py
+
+install: clean
 	python3 -m venv venv
 	$(PIP) install -U pip
-#	$(PIP) install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 	$(PIP) install -r requirements.txt
 
 clean:
